[package]
name = "resharper_quickfix"
version = "0.1.0"
authors = ["gorg <gorgmakesthings@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.4.1"
serde = { version = "1.0.104", features = ["derive"] }

